<resources>
    <string name="app_name">MyOne</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Common -->
    <string name="settings">设置</string>
    <string name="about">关于</string>

    <!-- Main TabBar -->
    <string name="main_tabbar_home_text">首页</string>
    <string name="main_tabbar_reading_text">文章</string>
    <string name="main_tabbar_question_text">问题</string>
    <string name="main_tabbar_thing_text">东西</string>
    <string name="main_tabbar_personal_text">个人</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <!-- Personal -->
    <string name="personal_login_text">立即登录</string>
    <string name="title_activity_setting">SettingActivity</string>

    <!-- Setting -->
    <string name="glance_over_set_hint_text">浏览设置</string>
    <string name="night_model_change_hint_text">夜间模式切换</string>
    <string name="account_number_hint_text">账号设置</string>
    <string name="setting_more_hint_text">更多</string>
    <string name="setting_go_grade_hint_text">去评分</string>
    <string name="setting_feedback_hint_text">反馈</string>
    <string name="setting_user_agreement_hint_text">用户协议</string>
    <string name="setting_version_hint_text">版本号</string>
    <string name="setting_log_out_hint_text">退出当前帐号</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="network_failure_hint_text">请检查网络连接,然后重试</string>
    <string name="network_failure_btn_retry_text">重试</string>

</resources>
