<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/main_bottom_tabbar_height"
    android:orientation="horizontal"
    android:background="@color/main_tabbar_background_color"
    android:clipChildren="false"
    android:gravity="center_vertical">

    <!-- 首页 -->
    <TextView
        android:id="@id/mainBottomTabbarHomeTV"
        style="@style/MainTabBarItem"
        android:drawableTop="@drawable/main_bottom_tabbar_home_selector"
        android:onClick="onClick"
        android:text="@string/main_tabbar_home_text"/>

    <!-- 文章 -->
    <TextView
        android:id="@id/mainBottomTabbarReadingTV"
        style="@style/MainTabBarItem"
        android:drawableTop="@drawable/main_bottom_tabbar_reading_selector"
        android:onClick="onClick"
        android:text="@string/main_tabbar_reading_text"/>

    <!-- 问题 -->
    <TextView
        android:id="@id/mainBottomTabbarQuestionTV"
        style="@style/MainTabBarItem"
        android:drawableTop="@drawable/main_bottom_tabbar_question_selector"
        android:onClick="onClick"
        android:text="@string/main_tabbar_question_text"/>

    <!-- 东西 -->
    <TextView
        android:id="@id/mainBottomTabbarThingTV"
        style="@style/MainTabBarItem"
        android:drawableTop="@drawable/main_bottom_tabbar_thing_selector"
        android:onClick="onClick"
        android:text="@string/main_tabbar_thing_text"/>

    <!-- 个人 -->
    <TextView
        android:id="@id/mainBottomTabbarPersonalTV"
        style="@style/MainTabBarItem"
        android:drawableTop="@drawable/main_bottom_tabbar_personal_selector"
        android:onClick="onClick"
        android:text="@string/main_tabbar_personal_text"/>

</LinearLayout>