<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@id/personalLoginRL"
        style="@style/PersonRow">

        <ImageView
            android:id="@id/personalLoginUserIconIV"
            style="@style/PersonRowIcon"
            android:src="@mipmap/user_default_icon" />

        <TextView
            style="@style/PersonRowText"
            android:layout_toRightOf="@id/personalLoginUserIconIV"
            android:text="@string/personal_login_text" />

        <ImageView style="@style/PersonRowRightArrow" />

    </RelativeLayout>

    <View style="@style/ListViewSeparateLine" />

    <RelativeLayout
        android:id="@id/personalSettingsRL"
        style="@style/PersonRow">

        <ImageView
            android:id="@id/personalSettingsIV"
            style="@style/PersonRowIcon"
            android:src="@mipmap/setting" />

        <TextView
            style="@style/PersonRowText"
            android:layout_toRightOf="@id/personalSettingsIV"
            android:text="@string/settings" />

        <ImageView style="@style/PersonRowRightArrow" />

    </RelativeLayout>

    <View style="@style/ListViewSeparateLine" />

    <RelativeLayout
        android:id="@id/personalAboutRL"
        style="@style/PersonRow">

        <ImageView
            android:id="@id/personalAboutIV"
            style="@style/PersonRowIcon"
            android:src="@mipmap/copyright_default_icon" />

        <TextView
            style="@style/PersonRowText"
            android:layout_toRightOf="@id/personalAboutIV"
            android:text="@string/about" />

        <ImageView style="@style/PersonRowRightArrow" />

    </RelativeLayout>

    <View style="@style/ListViewSeparateLine" />

</LinearLayout>