<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="38.0dip">

            <TextView
                android:id="@id/glance_over_set"
                style="@style/SettingSectionHeadTextView"
                android:text="@string/glance_over_set_hint_text" />

            <View
                android:id="@id/setting_separate_line0"
                style="@style/SettingListViewSeparateLine"
                android:layout_below="@id/glance_over_set" />

            <RelativeLayout
                android:id="@id/night_model_layout"
                style="@style/SettingListViewRowLayout"
                android:layout_below="@id/setting_separate_line0">

                <TextView
                    android:id="@id/night_model_change_hint"
                    style="@style/SettingListViewHintTextView"
                    android:text="@string/night_model_change_hint_text" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:background="@mipmap/attention_sportq_bg"
                    android:gravity="center">

                    <ImageView
                        android:id="@id/night_model_open_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:gravity="center"
                        android:scaleType="fitXY"
                        android:src="@mipmap/checkbox_click"
                        android:visibility="gone" />
                </LinearLayout>

            </RelativeLayout>

            <View
                android:id="@id/setting_separate_line1"
                style="@style/SettingListViewSeparateLine"
                android:layout_below="@id/night_model_layout" />

            <TextView
                android:id="@id/account_number_set"
                style="@style/SettingSectionHeadTextView"
                android:layout_below="@id/setting_separate_line1"
                android:layout_marginTop="45.0dip"
                android:text="@string/account_number_hint_text" />

            <View
                android:id="@id/setting_separate_line2"
                style="@style/SettingListViewSeparateLine"
                android:layout_below="@id/account_number_set" />

            <TextView
                android:id="@id/setting_more_hint"
                style="@style/SettingSectionHeadTextView"
                android:layout_below="@id/setting_separate_line2"
                android:layout_marginTop="45.0dip"
                android:text="@string/setting_more_hint_text" />

            <View
                android:id="@id/setting_separate_line3"
                style="@style/SettingListViewSeparateLine"
                android:layout_below="@id/setting_more_hint" />

            <RelativeLayout
                android:id="@id/go_grade_layout"
                style="@style/SettingListViewRowLayout"
                android:layout_below="@id/setting_separate_line3">

                <TextView
                    android:id="@id/go_grade_hint"
                    style="@style/SettingListViewHintTextView"
                    android:text="@string/setting_go_grade_hint_text" />

                <ImageView style="@style/SettingRowRightArrow" />

            </RelativeLayout>

            <View
                android:id="@id/setting_separate_line4"
                style="@style/SettingListViewSeparateLine"
                android:layout_below="@id/go_grade_layout" />

            <RelativeLayout
                android:id="@id/setting_feedback_layout"
                style="@style/SettingListViewRowLayout"
                android:layout_below="@id/setting_separate_line4">

                <TextView
                    android:id="@id/setting_feedback_hint"
                    style="@style/SettingListViewHintTextView"
                    android:text="@string/setting_feedback_hint_text" />

                <ImageView style="@style/SettingRowRightArrow" />

            </RelativeLayout>

            <View
                android:id="@id/setting_separate_line5"
                style="@style/SettingListViewSeparateLine"
                android:layout_below="@id/setting_feedback_layout" />

            <RelativeLayout
                android:id="@id/setting_user_agreement_layout"
                style="@style/SettingListViewRowLayout"
                android:layout_below="@id/setting_separate_line5">

                <TextView
                    android:id="@id/setting_user_agreement_hint"
                    style="@style/SettingListViewHintTextView"
                    android:text="@string/setting_user_agreement_hint_text" />

                <ImageView style="@style/SettingRowRightArrow" />

            </RelativeLayout>

            <View
                android:id="@id/setting_separate_line6"
                style="@style/SettingListViewSeparateLine"
                android:layout_below="@id/setting_user_agreement_layout" />

            <RelativeLayout
                android:id="@id/setting_version_layout"
                style="@style/SettingListViewRowLayout"
                android:layout_below="@id/setting_separate_line6">

                <TextView
                    android:id="@id/setting_version_hint"
                    style="@style/SettingListViewHintTextView"
                    android:text="@string/setting_version_hint_text" />

                <TextView
                    android:id="@id/setting_version_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:text="1.0"
                    android:textColor="@color/one_text_color"
                    android:textSize="15.0sp" />

            </RelativeLayout>

            <View
                android:id="@id/setting_separate_line7"
                style="@style/SettingListViewSeparateLine"
                android:layout_below="@id/setting_version_layout" />

            <View
                android:id="@id/setting_separate_line8"
                style="@style/SettingListViewSeparateLine"
                android:layout_below="@id/setting_separate_line7"
                android:layout_marginTop="@dimen/setting_row_height" />

            <RelativeLayout
                android:id="@id/setting_log_out_layout"
                style="@style/SettingListViewRowLayout"
                android:layout_below="@id/setting_separate_line8">

                <TextView
                    android:id="@id/setting_log_out_hint"
                    style="@style/SettingListViewHintTextView"
                    android:layout_centerHorizontal="true"
                    android:text="@string/setting_log_out_hint_text" />

            </RelativeLayout>

            <View
                style="@style/SettingListViewSeparateLine"
                android:layout_below="@id/setting_log_out_layout" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
